--- a/src/css/style.css
+++ b/src/css/style.css
@@ -61,7 +61,6 @@ p {
   line-height: 22px;
   animation: typing 0.5s steps(30, end);
   white-space: nowrap;
-  overflow: hidden;
 }
 
 div {
@@ -143,6 +142,8 @@ a:hover {
 
 #terminal {
   margin-left: 20px;
+  margin-right: 20px;
+  overflow-x: scroll;
 }
 
 #input-line {
